--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,10 @@ todo
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 ^^^^^^^^^^^^^
 ^^^^^^^^^^^^^^^^^^
+- fix all the compiler errors!
 
 - don't close socket.. we lose the capability to do handshake protocols
+- randomize which packet is chosen to randomly string together handshake sequences
 
 - specific byte-range-offset mutation - target specific part of proto (libmutant)
 - configurable percent-mutate
